creation du menu d'accueil

--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bethom</title> <!--titre de ma page-->
-</head>
-<body>
-    
+    <title> <h1>bethom </h1> </title> <!--titre de ma page-->
+    <link href="style.css" rel="stylesheet"> <!--lien vers ma feuille de style-->
+<body> 
+    <header> <!--partie du menu de la,page-->
+        <h1> BeThom</h1>
+        <nav >
+            <ul>
+                <li><a href ="#accueil-photo">Accueil</a></li>
+                <li><a href ="#articles-view">Blog</a></li>
+                <li><a href ="#works">Portfolio</a></li>
+                <li><a href ="#contact">Contact</a></li>
+             </ul>
+        </nav>
+    </header>
+
+    <section id="accueil-photo"> <!--section de l'accueil de la page-->
+
+    </section>
+
+    <section id="articles-view"> <!--section du blog de la page-->
+
+    </section>
+
+    <section id="works"> <!--section du portfolio de la page-->
+
+    </section>
+
+    <section id="contact"> <!--section de contact de la page-->
+
+    </section>
+
+
+
+
 </body>
+
+<footer>
+
+</footer>
 </html>
