debut de la partie contact et il reste à reajuster quelques points

--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
             <section id="works"> <!--section du portfolio de la page-->
                 <div class="contener">
                     
-                        <h4> Travaux en vedette</h4>
+                    <h4> Travaux en vedette</h4>
                     <div class="box">   
 
-                        <h4> Travaux en vedette</h4>
                         <article class="mestravaux"> <!--partie des articles-->
                             <div class ="disign">
                                 <a href =imgages/image1.png><img src="images/image1.png" alt="imgage1"></a>
@@ -83,7 +82,7 @@
                             <div class="description">
                                 <h3> Disign de tableau de bord</h3>
                                 <p> <span class="annee">2020</span> <span class="illustrations">Dashboard</span></p>
-                                <p> Un projet de conception d'interface utilisateur pour une plateforme de gestion. L'objectif était de proposer un tableau de bord intuitif et esthétique.</p>
+                                <p> Un projet de conception d'interface u   tilisateur pour une plateforme de gestion. L'objectif était de proposer un tableau de bord intuitif et esthétique.</p>
                             </div>
                         </article>
 
@@ -116,15 +115,38 @@
             <!-- quatrieme partie de la page-->
             <section id="contact"> <!--section de contact de la page-->
                 <div class="contener">
-                    <div class="row pag-20">
-                        <div class="contact">
-                            <h4> Me contacter</h4>
-
+                    <h4> Me contacter</h4>
+                    <div class="row">
+                            
+                        <div class="mode-contact">
+                            <h3> Parlons-en</h3>
+                            <p>Vous avez une grande idée ou un projet à developper et besoin d'aide ? Contacter-moi, je serai ravi d'échanger avec vous et de vous accompagner.</p>
+                            <h3>Mail</h3>
+                            <p>beebs@gmail.com</p>
+                             <h3>Socials</h3>
+                             <ul>
+                                <li>Instagram</li>
+                                <li>Twitter</li>
+                                <li>Facebook</li>
+                                <li>Linkdedin</li>
+                            </ul>
                         </div>
-                    </div>
 
-
+                        <form>
+                            <label fom="name">Nom</label>
+                            <input type="text" id="name" placeholder="">
+                            <label fom="Email">Email</label>
+                            <input type="text" id="Email" placeholder="">
+                            <label fom="Quel service vous interresse">Quel service vous interresse</label>
+                            <input type="text" id="Quel service vous interresse" placeholder="Select projet type">
+                            <label fom="Budget">Budget</label>
+                            <input type="text" id="Budget" placeholder="Select projet budget">
+                            <label fom="Message">Message</label>
+                            <input type="text" id="Message" placeholder="">
+                        </form>
+                     </div>
                 </div>
+
             </section>
         </main>
     </body>
