--- a/index.html
+++ b/index.html
@@ -124,25 +124,39 @@
                             <h3>Mail</h3>
                             <p>beebs@gmail.com</p>
                              <h3>Socials</h3>
-                             <ul>
-                                <li>Instagram</li>
-                                <li>Twitter</li>
-                                <li>Facebook</li>
-                                <li>Linkdedin</li>
-                            </ul>
+                            <p><a href="https//Instagram.com" target="_blank">Instagram</a></p>
+                            <p><a href="https//x.com" target="_blank">Twitter</a></p>
+                            <p><a href="https//Facebook.com" target="_blank">Facebook</a></p>
+                            <p><a href="https//Linkdedin.com" target="_blank">Linkdedin</a></p>
                         </div>
 
-                        <form>
+                        <form class="adress">
                             <label fom="name">Nom</label>
                             <input type="text" id="name" placeholder="">
-                            <label fom="Email">Email</label>
-                            <input type="text" id="Email" placeholder="">
-                            <label fom="Quel service vous interresse">Quel service vous interresse</label>
-                            <input type="text" id="Quel service vous interresse" placeholder="Select projet type">
+
+                            <label fom="email">Email</label>
+                            <input type="text" id="email" placeholder="">
+
+                            <label fom="service">Quel service vous interresse</label>
+                            <select name="service" id="service" placeholder="">
+                                <option value=""></option>
+                                <option value="disign">Disign</option>
+                                <option value="portrait">portrait</option>
+                                <option value="typographie">Typographie</option>
+                            </select>
+
                             <label fom="Budget">Budget</label>
-                            <input type="text" id="Budget" placeholder="Select projet budget">
+                            <select name="Budget" id="Budget" placeholder="">
+                                <option value=""></option>
+                                <option value="0-500€ ">0 - 500€</option>
+                                <option value="500-1000€">500 - 1000€</option>
+                                <option value="1000-1500€">1000 - 1500€</option>
+                            </select>
+                            
                             <label fom="Message">Message</label>
-                            <input type="text" id="Message" placeholder="">
+                            <textarea name="text" id="Message" placeholder=""></textarea>
+
+                            <input type="submit" id="Envoyer" placeholder="">
                         </form>
                      </div>
                 </div>
@@ -153,10 +167,16 @@
 
     <!-- cinquieme (le footer) partie de la page-->
     <footer>
-
+        <div class="logo-reseaux">
+            <a href="#" target="_blank"> <img src="images/facebook.png" alt="facebook"/></a>
+            <a href="#" target="_blank"> <img src="images/instagram.png" alt="instagram"/></a>
+            <a href="#" target="_blank"> <img src="images/twiter.png" alt="twiter"/></a>
+            <a href="#" target="_blank"> <img src="images/Linkedin.png" alt="Linkedin"/></a>
+        </div>
+        <p class="bas"> Copyright ©2020 All rights reserved </p>
 
     </footer>
-</html>
+</html
 
 
 
